--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -47,7 +46,7 @@
   <main class="conteudo">
     <section class="conteudo-principal">
       <div class="conteudo-principal-escrito">
-        <h2 class="conteudo-principal-escrito-uptitulo">Hi, my name is</h2>
+        <h2 class="conteudo-principal-escrito-uptitulo">Oi, Meu nome é</h2>
         <h1 class="conteudo-principal-escrito-titulo"> <span class="Talona">Talona <span class="Costa">Costa</span><span
               class="ponto">.<span></h1>
         <h3 class="conteudo-principal-escrito-titulo">Learning features of <span class="HTML">HTML<span> <span
@@ -55,76 +54,7 @@
         <p class="conteudo-principal-escrito-subtitulo">Sou um desenvolvedor web designer apaixonado por combinar
           criatividade e tecnologia para criar experiências digitais impactantes e funcionais.</p>
       </div>
-
-      <div id="bottonc">
-        <a class="bottonc" href="./content/about.html">
-            Sobre Mim
-          </a>
-        </div>
-
-    </section>
-  </main>
-  <img class="boty-flor" src="./assets/img/Union.svg">
-</body>
-</html>
-=======
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Talona</title>
-  <link rel="stylesheet" href="src/css/base/reset.css">
-  <link rel="stylesheet" href="src/css/base/normalize.css">
-  <link rel="stylesheet" href="assets/css/headeri.css">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <script src="src/js/components/index.js"></script>
-</head>
-
-<body>
   
-  <header class="header">
-    <a href="index.html">
-    <img class="header-imagem" src="./assets/img/Union.svg" alt="Logo">
-  </a>
-    <nav>
-        <ul class="menu">
-            <li><a href="./content/about.html">01.Sobre mim</a></li>
-            <li><a href="./content/flowers.html">02.Flores</a></li>
-            <li><a href="./content/projects.html">03.Projetos</a></li>
-            <li><a href="./content/contact.html">04.Meus links</a></li>
-        </ul>
-    </nav>
-
-     <div id="Home">
-        <a class="Home" href="index.html">
-          Home
-        </a>
-        </div>
-    
-</header>
-
-
-<div class="theme-switch-wrapper">
-  <label class="theme-switch" for="checkbox">
-      <input type="checkbox" id="checkbox" />
-      <div class="slider round"></div>
-  </label>
-</div>
-
-  <main class="conteudo">
-    <section class="conteudo-principal">
-      <div class="conteudo-principal-escrito">
-        <h2 class="conteudo-principal-escrito-uptitulo">Hi, my name is</h2>
-        <h1 class="conteudo-principal-escrito-titulo"> <span class="Talona">Talona <span class="Costa">Costa</span><span
-              class="ponto">.<span></h1>
-        <h3 class="conteudo-principal-escrito-titulo">Learning features of <span class="HTML">HTML<span> <span
-                class="CSS">CSS<span> <span class="JS">JS<span></h3>
-        <p class="conteudo-principal-escrito-subtitulo">Sou um desenvolvedor web designer apaixonado por combinar
-          criatividade e tecnologia para criar experiências digitais impactantes e funcionais.</p>
-      </div>
-
       <div id="bottonc">
         <a class="bottonc" href="./content/about.html">
             Sobre Mim
@@ -133,7 +63,6 @@
 
     </section>
   </main>
-  <img class="boty-flor" src="./assets/img/Union.svg">
+ <img class="boty-flor" src="./assets/img/Union.svg">
 </body>
 </html>
->>>>>>> 136b70839c21b6203dd24554f0f6990a524d24e8
