Sua mensagem de commit

--- a/content/about.html
+++ b/content/about.html
@@ -56,11 +56,7 @@
 
   <div class="bio">
       <p>
-        Como especialista em front-end experiente, com sólidas habilidades em JavaScript, 
-        HTML/CSS e design responsivo, você está comprometido com a qualidade. 
-        Sua experiência em desenvolvimento orientado por testes é admirável. 
-        Sua paixão é criar experiências excepcionais para os usuários. 
-        Você está em busca de oportunidades para contribuir em projetos desafiadores que estejam alinhados com os mais altos padrões de usabilidade e design.
+          I'm an experienced front-end developer with solid skills in JavaScript, HTML/CSS, and responsive design. Committed to quality, I have experience in test-driven development. My passion is creating exceptional user experiences. I'm looking for opportunities to contribute to challenging projects aligned with the highest standards of usability and design.
       </p>
   </div>
 </div>
