--- a/content/contact.html
+++ b/content/contact.html
@@ -39,8 +39,7 @@
       </label>
   </div>
         <div class="popup-quote">
-          A beleza de um site bem projetado é como um jardim de flores, <br>
-          com cada elemento visual contribuindo para a experiência do usuário
+Mas... a sensação de que perdi algo persiste por um longo tempo depois que eu acordo.
     </div>
 
     <div id="userName">
