--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -46,7 +47,7 @@
   <main class="conteudo">
     <section class="conteudo-principal">
       <div class="conteudo-principal-escrito">
-        <h2 class="conteudo-principal-escrito-uptitulo">Oi, Meu nome é</h2>
+        <h2 class="conteudo-principal-escrito-uptitulo">Hi, my name is</h2>
         <h1 class="conteudo-principal-escrito-titulo"> <span class="Talona">Talona <span class="Costa">Costa</span><span
               class="ponto">.<span></h1>
         <h3 class="conteudo-principal-escrito-titulo">Learning features of <span class="HTML">HTML<span> <span
@@ -54,7 +55,7 @@
         <p class="conteudo-principal-escrito-subtitulo">Sou um desenvolvedor web designer apaixonado por combinar
           criatividade e tecnologia para criar experiências digitais impactantes e funcionais.</p>
       </div>
-  
+
       <div id="bottonc">
         <a class="bottonc" href="./content/about.html">
             Sobre Mim
@@ -63,6 +64,6 @@
 
     </section>
   </main>
- <img class="boty-flor" src="./assets/img/Union.svg">
+  <img class="boty-flor" src="./assets/img/Union.svg">
 </body>
 </html>
