--- a/content/contact.html
+++ b/content/contact.html
@@ -39,7 +39,7 @@
       </label>
   </div>
         <div class="popup-quote">
-Mas... a sensação de que perdi algo persiste por um longo tempo depois que eu acordo.
+Mas... a sensação de que perdi algo persiste por um longo tempo depois que eu acordo...
     </div>
 
     <div id="userName">
@@ -47,7 +47,7 @@ Mas... a sensação de que perdi algo persiste por um longo tempo depois que eu 
     </div>
 
     <div id="links">
-      <a class="link github" href="https://github.com/Talonaa" target="_blank">
+      <a class="link github" href="https://github.com/Talonacosta" target="_blank">
         Github
       </a>
       <a class="link linkedin" href="https://www.linkedin.com/in/talona-costa-b83054295/" target="_blank">
