--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     
 </header>
 
-
+<main class="conteudo">
     <section class="conteudo-principal">
       <div class="conteudo-principal-escrito">
         <h2 class="conteudo-principal-escrito-uptitulo">Hi, my name is</h2>
