--- a/content/contact.html
+++ b/content/contact.html
@@ -32,6 +32,12 @@
     
     </header>
 
+    <div class="theme-switch-wrapper">
+      <label class="theme-switch" for="checkbox">
+          <input type="checkbox" id="checkbox" />
+          <div class="slider round"></div>
+      </label>
+  </div>
         <div class="popup-quote">
 Mas... a sensação de que perdi algo persiste por um longo tempo depois que eu acordo...
     </div>
@@ -44,7 +50,7 @@ Mas... a sensação de que perdi algo persiste por um longo tempo depois que eu 
       <a class="link github" href="https://github.com/Talonacosta" target="_blank">
         Github
       </a>
-      <a class="link linkedin" href="https://www.linkedin.com/in/talona-costa-b83054295/" target="_blank">
+      <a class="link linkedin" href="https://www.linkedin.com/in/talona-costa/" target="_blank">
          Linkedin
       </a>
       <a class="link twitter" href="https://twitter.com/Talonaa_" target="_blank">
