--- a/content/about.html
+++ b/content/about.html
@@ -33,7 +33,12 @@
 </header>
 <body>
     
-
+  <div class="theme-switch-wrapper">
+    <label class="theme-switch" for="checkbox">
+        <input type="checkbox" id="checkbox" />
+        <div class="slider round"></div>
+    </label>
+</div>
 
 
 <div class="container">
