--- a/content/flowers.html
+++ b/content/flowers.html
@@ -33,7 +33,12 @@
 
 </header>
 
-
+<div class="theme-switch-wrapper">
+  <label class="theme-switch" for="checkbox">
+      <input type="checkbox" id="checkbox" />
+      <div class="slider round"></div>
+  </label>
+</div>
 
 <div class="carousel-container">
   <div class="carousel">
