--- a/content/projects.html
+++ b/content/projects.html
@@ -33,6 +33,13 @@
         
   </header>
 
+  <div class="theme-switch-wrapper">
+    <label class="theme-switch" for="checkbox">
+        <input type="checkbox" id="checkbox" />
+        <div class="slider round"></div>
+    </label>
+  </div>
+
   <div class="cartas3">
     <div class="card card1">
       <div class="card-content">
